# Template_Metaprogramming

./: .gitignore  README.md  crtp_reference.h  main.cpp  normal_interface.h
00_templates/: CMakeLists.txt  Readme.md  array.h  header.h  main.cpp
01_containers/: CMakeLists.txt  Readme.md  header.h  main.cpp
02_functions/function_in_header/: CMakeLists.txt  header.h  main.cpp
02_functions/function_in_source/: CMakeLists.txt  header.cpp  header.h
02_functions/function_in_tpp/: header.h  header.tpp
03_explicitInstantiation/: README.md
03_explicitInstantiation/problem_formulation/: myTemplate.cpp  myTemplate.h
03_explicitInstantiation/problem_solution_0/: compile.sh
03_explicitInstantiation/problem_solution_2/: compile.sh  myTemplate.cpp
03_explicitInstantiation/problem_solution_v0/: myTemplate.h
04_conditional/: CMakeLists.txt  header.h
04_proxy_trick/: CMakeLists.txt  Readme.md  header.h  main.cpp
05_argsDeduction/: CMakeLists.txt  header.h
07_find_type/: CMakeLists.txt  README.md
08_is_same/: CMakeLists.txt  header.h  main.cpp
09_member_detection/: CMakeLists.txt
10_remove_const/: CMakeLists.txt  header.h
11_CRTP/: CMakeLists.txt
12_variadic/: CMakeLists.txt  README.md
15_boostTraits/: Readme.md
CRTP/: crtp_interface.h
XX_tests/: CMakeLists.txt
argsDeduction/: README.md  main.cpp
conditional/: README.md  main.cpp
example/: example.c
find_type/: header.h  main.cpp
is_same/: README.md
member_detection/: README.md  header.h  main.cpp
remove_const/: README.md  main.cpp
variadic_template/: main.cpp
(+26 files in other folders)
